# aligner

./: .gitignore  MAKEFILE  MANIFEST.in  conftest.py  pyproject.toml
aligner/src/aligner/: __init__.py  resourcefiles.py
aligner/tests/: test_1m_alignment.py
lco_aligner/src/aligner/: twirler.py
lco_aligner/tests/: __init__.py
