[tool.poetry]
name = "aligner"
version = "0.0.1"
description = "A small package for aligning LCO images for AstroImageJ photometry"
license = "MIT"
license-files = ["LICENSE"]
authors = ["Meir E. Schochet <meir@msu.edu>"]
readme = "README.md"
repository = "https://github.com/m-schochet/aligner"
include = ["MANIFEST.in"]


[tool.poetry.dependencies]
python = "^3.12"
astropy = ">=5.0"
pytz = ">=2026.0"
twirl = ">=0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]